...
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/view_list"
            android:title="Browse" />
        <item
            android:id="@+id/nav_filter"
            android:icon="@drawable/ic_filter_outline_grey600_48dp"
            android:title="Filter" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_outline_grey600_48dp"
            android:title="My Profile" />
...
